--- a/src/main/webapp/app/entities/core/media/media-detail.component.html
+++ b/src/main/webapp/app/entities/core/media/media-detail.component.html
@@ -19,8 +19,9 @@
                 </dd>
                 <dt><span jhiTranslate="gatewayApp.coreMedia.fileSize">File Size</span></dt>
                 <dd>
-                    <span>{{media.fileSize}}</span>
+                    <span>{{media.fileSize | degafilesize}}</span>
                 </dd>
+                
                 <dt><span jhiTranslate="gatewayApp.coreMedia.dimensions">Dimensions</span></dt>
                 <dd>
                     <span>{{media.dimensions}}</span>
