--- a/src/main/webapp/app/entities/factcheck/rating/rating-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/rating/rating-update.component.html
@@ -82,6 +82,14 @@
                             Upload Rating Icon
                         </span>
                     </button>
+                    <button *ngIf="rating.media != null" mat-raised-button color="warn"
+                    id="field_iconURL" class="btn btn-primary jh-create-entity create-media"
+                        (click)="deleteMediaForFeature()" type="button">
+                    <fa-icon [icon]="'trash-alt'"></fa-icon>
+                    <span class="hidden-sm-down" >
+                        Remove
+                    </span>
+                </button>
                     <div *ngIf="rating.media" class="margin-t-20">
                         <img src={{rating.media.sourceURL}} alt="" width="100" height="100">
                     </div>
