changed delete function name

--- a/src/main/webapp/app/entities/core/dega-user/dega-user-update.component.html
+++ b/src/main/webapp/app/entities/core/dega-user/dega-user-update.component.html
@@ -74,7 +74,7 @@
                     </button>
                     <button *ngIf="degaUser.media != null" mat-raised-button color="warn"
                         id="field_iconURL" class="btn btn-danger jh-create-entity create-media"
-                            (click)="deleteMediaForFeature()" type="button">
+                            (click)="deleteMediaForDegaUser()" type="button">
                         <fa-icon [icon]="'trash-alt'"></fa-icon>
                         <span class="hidden-sm-down" >
                             Remove
