--- a/src/main/webapp/app/entities/core/post/post-update.component.html
+++ b/src/main/webapp/app/entities/core/post/post-update.component.html
@@ -64,7 +64,7 @@
                     </div>
                     <div class="full-width margin-t-20" *ngIf="postEditFormGroup.value.media">
                         <button mat-button mat-raised-button color="primary" type="button" class="full-width"
-                                (click)="deleteMediaForFeature()"> Delete featured media
+                                (click)="deleteMediaForPostUpdate()"> Delete featured media
                             <mat-icon>delete</mat-icon>
                         </button>
                     </div>
