--- a/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.html
@@ -99,7 +99,7 @@
                     </div>
                     <div class="full-width margin-t-20" *ngIf="factCheckEditFormGroup.value.media">
                         <button mat-raised-button color="primary" type="button" class="full-width"
-                                (click)="deleteMediaForFeature()"> Delete featured media
+                                (click)="deleteMediaForFactcheck()"> Delete featured media
                             <mat-icon>delete</mat-icon>
                         </button>
                     </div>
