--- a/src/main/webapp/app/entities/factcheck/claimant/claimant-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/claimant/claimant-update.component.html
@@ -49,7 +49,7 @@
                         </button>
                         <button *ngIf="claimant.media != null" mat-raised-button color="warn"
                             id="field_iconURL" class="btn btn-primary jh-create-entity create-media"
-                                (click)="deleteMediaForFeature()" type="button">
+                                (click)="deleteMediaForClaimant()" type="button">
                             <fa-icon [icon]="'trash-alt'"></fa-icon>
                             <span class="hidden-sm-down" >
                                 Remove
