--- a/src/main/webapp/app/entities/factcheck/claimant/claimant-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/claimant/claimant-update.component.html
@@ -48,7 +48,7 @@
                             </span>
                         </button>
                         <button *ngIf="claimant.media != null" mat-raised-button color="warn"
-                            id="field_iconURL" class="btn btn-primary jh-create-entity create-media"
+                            id="field_deleteImage" class="btn btn-primary jh-create-entity create-media"
                                 (click)="deleteMediaForClaimant()" type="button">
                             <fa-icon [icon]="'trash-alt'"></fa-icon>
                             <span class="hidden-sm-down" >
