--- a/src/main/webapp/app/entities/factcheck/rating/rating-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/rating/rating-update.component.html
@@ -83,7 +83,7 @@
                         </span>
                     </button>
                     <button *ngIf="rating.media != null" mat-raised-button color="warn"
-                    id="field_iconURL" class="btn btn-primary jh-create-entity create-media"
+                    id="field_iconDelete" class="btn btn-primary jh-create-entity create-media"
                         (click)="deleteMediaForRating()" type="button">
                     <fa-icon [icon]="'trash-alt'"></fa-icon>
                     <span class="hidden-sm-down" >
