--- a/src/main/webapp/app/entities/core/organization/organization-detail.component.html
+++ b/src/main/webapp/app/entities/core/organization/organization-detail.component.html
@@ -157,6 +157,10 @@
                 <dd>
                     <span>{{organization.timeZone}}</span>
                 </dd>
+                <dt><span jhiTranslate="gatewayApp.coreOrganization.clientId">Client Id</span></dt>
+                <dd>
+                    <span>{{organization.clientId}}</span>
+                </dd>
                 <dt><span jhiTranslate="gatewayApp.coreOrganization.slug">Slug</span></dt>
                 <dd>
                     <span>{{organization.slug}}</span>
