Updated choseMediaforFeature name to chooseMediaforFeature

--- a/src/main/webapp/app/entities/core/post/post-update.component.html
+++ b/src/main/webapp/app/entities/core/post/post-update.component.html
@@ -53,7 +53,7 @@
                 <div class="form-group">
                     <div class="full-width">
                         <button mat-button mat-raised-button color="primary" class="full-width"
-                                (click)="choseMediaforFeature()">Upload Featured media
+                                (click)="chooseMediaforFeature()">Upload Featured media
                             <mat-icon>cloud_upload</mat-icon>
                         </button>
                     </div>
