--- a/src/main/webapp/app/entities/factcheck/claimant/claimant-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/claimant/claimant-update.component.html
@@ -41,7 +41,7 @@
                     <div class="form-group">
                         <button mat-raised-button color="primary"
                             id="field_imageURL" class="jh-create-entity create-media"
-                                (click)="choseMediaforFeature()" type="button">
+                                (click)="chooseMediaforFeature()" type="button">
                             <fa-icon [icon]="'plus'"></fa-icon>
                             <span class="hidden-sm-down"  jhiTranslate="gatewayApp.factcheckClaimant.uploadImage">
                                 Upload Image
