--- a/src/main/webapp/app/entities/factcheck/rating/rating-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/rating/rating-update.component.html
@@ -63,7 +63,7 @@
                 <div class="form-group">
                     <button mat-raised-button color="primary"
                         id="field_iconURL" class="btn btn-primary jh-create-entity create-media"
-                            (click)="choseMediaforFeature()" type="button">
+                            (click)="chooseMediaforFeature()" type="button">
                         <fa-icon [icon]="'plus'"></fa-icon>
                         <span class="hidden-sm-down"  jhiTranslate="gatewayApp.factcheckRating.uploadRatingIcon">
                             Upload Rating Icon
