--- a/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.html
@@ -88,7 +88,7 @@
                 <div class="form-group">
                     <div class="full-width">
                         <button mat-raised-button color="primary" type="button" class="full-width"
-                                (click)="choseMediaforFeature()">Upload Featured media
+                                (click)="chooseMediaforFeature()">Upload Featured media
                             <mat-icon>cloud_upload</mat-icon>
                         </button>
                     </div>
